# chat-style-agent

./: .env.example  .gitignore  Makefile  README.md  api.py  pyproject.toml
configs/: eval_cases.json
scripts/: eval_json_valid.py  run_eval.sh
src/chat_style_agent/: agent.py  cli.py  prompts.py  tools.py
src/chat_style_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
styles/: JP_18-24_friends.md  JP_25-34_work.md  KR_18-24_friends.md  KR_25-34_work.md  UK_18-24_friends.md  UK_25-34_work.md  US_18-24_friends.md  US_25-34_work.md
tests/: eval_cases.jsonl  test_smoke.py
